objects/amc__Expense__c.object
<CustomObject>
    <description>This Object is used to record expenses relating to a particular Project.</description>
    <fields>
        <fullName>amc__Amount_Claimed__c</fullName>
        <formula>IF(amc__Mileage_Amount__c &gt; 0, amc__Mileage_Amount__c, amc__Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the value of the Expense Claim</inlineHelpText>
        <label>Amount Claimed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Amount__c</fullName>
        <inlineHelpText>Identifies the amount being claimed (if not mileage)</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Approval_Date_Stamp__c</fullName>
        <inlineHelpText>The date the Expense was approved.</inlineHelpText>
        <label>Approval Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Approval_Date__c</fullName>
        <formula>IF( ISPICKVAL(amc__Approval_Status__c, &apos;Approved&apos;), IF( NOT(ISNULL(amc__Approval_Date_Stamp__c)),amc__Approval_Date_Stamp__c,amc__Date__c),null  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Approval date for this Time Log</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Approval_Status__c</fullName>
        <inlineHelpText>Identifies the status of the Expense approval</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Approver_Current_User__c</fullName>
        <formula>IF( amc__Incurred_By__r.amc__Expense_Approver__r.amc__User__r.Id = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the Current User is the User required to approve this Expense</inlineHelpText>
        <label>Approver Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Approver__c</fullName>
        <formula>amc__Incurred_By__r.amc__Expense_Approver__r.amc__First_Name__c + &quot; &quot; + amc__Incurred_By__r.amc__Expense_Approver__r.amc__Last_Name__c</formula>
        <inlineHelpText>Identifies the Role responsible for approving the Expense</inlineHelpText>
        <label>Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Billing_Event_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Billing Event Item record this Expense was invoiced on</inlineHelpText>
        <label>Billing Event Item</label>
        <referenceTo>amc__Billing_Event_Item__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Budget_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Budget Item this record relates to</inlineHelpText>
        <label>Budget Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.amc__Project__c</field>
                <operation>equals</operation>
                <valueField>amc__Budget_Item__c.amc__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>amc__Budget_Item__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Category__c</fullName>
        <inlineHelpText>Identifies the Category this Expense relates to</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Entertaining</fullName>
                </value>
                <value>
                    <fullName>Equipment Fees</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Postage</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Professional Fees</fullName>
                </value>
                <value>
                    <fullName>Stationery</fullName>
                </value>
                <value>
                    <fullName>Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Converted_Amount__c</fullName>
        <inlineHelpText>If the Project currency is different from the Expense currency, this field will contain the converted value.</inlineHelpText>
        <label>Converted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Converted_Cost_Amount__c</fullName>
        <inlineHelpText>If the Project currency is different from the Expense currency, this field will contain the converted value.</inlineHelpText>
        <label>Converted Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Converted_Cost_Tax_Amount__c</fullName>
        <inlineHelpText>If the Project currency is different from the Expense currency, this field will contain the converted value.</inlineHelpText>
        <label>Converted Cost Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Converted_Cost_ex_Tax_Amount__c</fullName>
        <inlineHelpText>If the Project currency is different from the Expense currency, this field will contain the converted value.</inlineHelpText>
        <label>Converted Cost ex-Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Converted_Currency__c</fullName>
        <inlineHelpText>The currency code associated with the Converted Amount.</inlineHelpText>
        <label>Converted Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Converted_Tax_Amount__c</fullName>
        <description>If the Project currency is different from the Expense currency, this field will contain the converted Tax Amount value.</description>
        <label>Converted Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Converted_ex_Tax_Amount__c</fullName>
        <description>If the Project currency is different from the Expense currency, this field will contain the converted ex-Tax Amount value.</description>
        <label>Converted ex-Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Amount__c</fullName>
        <inlineHelpText>Identifies the cost amount being claimed (if not mileage)</inlineHelpText>
        <label>Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Tax_Amount__c</fullName>
        <inlineHelpText>Identifies the cost tax amount of the Expense</inlineHelpText>
        <label>Cost Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_ex_Tax_Amount__c</fullName>
        <formula>amc__Cost_Amount__c -  amc__Cost_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the Cost ex-Tax Amount based on &apos;Cost Amount&apos; - &apos;Cost Tax Amount&apos;</inlineHelpText>
        <label>Cost ex Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Custom_Mark_Up__c</fullName>
        <inlineHelpText>This Percent can be used to override the Project Mark Up %</inlineHelpText>
        <label>Custom Mark Up %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Date__c</fullName>
        <inlineHelpText>Identifies the date the Expense was incurred</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Distance_Km_Miles__c</fullName>
        <inlineHelpText>Identifies the number of Kilometres / Miles being claimed</inlineHelpText>
        <label>Distance (Km / Miles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Expense_Notes_RT__c</fullName>
        <inlineHelpText>Detailed Notes about the Expense</inlineHelpText>
        <label>Expense Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Expense_Notes__c</fullName>
        <inlineHelpText>Identifies any supporting notes as to why the Expense was incurred</inlineHelpText>
        <label>Expense Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Incurred_By_Current_User__c</fullName>
        <description>Identifies if the Current User is the Person Who Incurred the Expense.</description>
        <formula>IF( amc__Incurred_By__r.amc__User__r.Id = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the Current User is the Person Who Incurred the Expense.</inlineHelpText>
        <label>Incurred By Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role who incurred the Expense</inlineHelpText>
        <label>Incurred By</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the Expense has been included in a Billing Event</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Mark_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Expense should have a Mark Up applied</inlineHelpText>
        <label>Mark Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Mark_Up__c</fullName>
        <formula>IF(
  amc__Mark_Up_Required__c,
  IF(
    NOT(
      ISNULL(amc__Custom_Mark_Up__c)
    ), 
    amc__Custom_Mark_Up__c,
    amc__Project__r.amc__Expenses_Mark_Up__c
  ),
  null
)</formula>
        <inlineHelpText>Formula: Identifies the Mark Up % applied to this Expense</inlineHelpText>
        <label>Mark Up %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Mileage_Amount__c</fullName>
        <formula>If(amc__Mark_Up_Required__c,
 amc__Distance_Km_Miles__c * amc__Incurred_By__r.amc__Mileage_Rate__c + (( amc__Distance_Km_Miles__c * 
 amc__Incurred_By__r.amc__Mileage_Rate__c) * amc__Project__r.amc__Expenses_Mark_Up__c), amc__Distance_Km_Miles__c * amc__Incurred_By__r.amc__Mileage_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the amount being claimed for the Distance</inlineHelpText>
        <label>Mileage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Milestone this Expense relates to.</description>
        <inlineHelpText>The Milestone this Expense relates to.</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>amc__Milestone__c.amc__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.amc__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>amc__Milestone__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Expenses marked as Non Billable will not be included in Billing Events/Items.</inlineHelpText>
        <label>Non Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Payment_Status__c</fullName>
        <description>Identifies the Status of the Expense. Note: It is recommended you do not edit or remove these values</description>
        <inlineHelpText>Identifies the Status of the Expense. Note: It is recommended you do not edit or remove these values</inlineHelpText>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Approval_Required__c</fullName>
        <formula>amc__Project__r.amc__Project_Owner_Expense_Approval_Reqd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by Expense Trigger. Identifies if Project Owner Approval is required for this Expense</inlineHelpText>
        <label>Project Owner Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Approval_Status__c</fullName>
        <inlineHelpText>Identifies the Approval Status of the Project Owner for this Expense</inlineHelpText>
        <label>Project Owner Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amc__Approval_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role record for the person that is the Project Owner responsible for approving this Expense</inlineHelpText>
        <label>Project Owner Approver</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Expenses (Project Owner Approver)</relationshipLabel>
        <relationshipName>Approval_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Current_User__c</fullName>
        <formula>amc__Project_Owner_Approver__r.amc__User__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the Current User is the User required to approve this Expense as the Project Owner</inlineHelpText>
        <label>Project Owner Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Rejection_Comments__c</fullName>
        <inlineHelpText>Identifies the reason the Project Owner rejected the Expense</inlineHelpText>
        <label>Project Owner Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Project the Expense record relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Purchase Order this Expense relates to</description>
        <inlineHelpText>Identifies the Purchase Order this Expense relates to</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>amc__Purchase_Order__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Rejection_Comments__c</fullName>
        <inlineHelpText>Identifies the reason the Approver rejected the Expense</inlineHelpText>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Approval_Required__c</fullName>
        <formula>OR(AND(NOT(ISBLANK(amc__Project__c)),  amc__Project__r.amc__Role_Manager_Expense_Approval_Reqd__c, NOT(ISBLANK(amc__Incurred_By__r.amc__Expense_Approver__c))),AND(ISBLANK(amc__Project__c), NOT(ISBLANK(amc__Incurred_By__r.amc__Expense_Approver__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by Expense Trigger. Identifies if Role Manager Approval is required for this Expense</inlineHelpText>
        <label>Role Manager Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Approval_Status__c</fullName>
        <label>Role Manager Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amc__Approval_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role record for the person that is the Role Manager responsible for approving this Expense</inlineHelpText>
        <label>Role Manager Approver</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Expenses (Role Manager Approver)</relationshipLabel>
        <relationshipName>Approver_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Current_User__c</fullName>
        <formula>amc__Role_Manager_Approver__r.amc__User__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the Current User is the User required to approve this Expense as the Role Manager</inlineHelpText>
        <label>Role Manager Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Rejection_Comments__c</fullName>
        <inlineHelpText>Identifies the reason the Role Manager rejected the Expense</inlineHelpText>
        <label>Role Manager Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Source__c</fullName>
        <description>Identifies the payment source used to pay for this Expense</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card - Personal</fullName>
                </value>
                <value>
                    <fullName>Credit Card - Company</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Tax_Amt__c</fullName>
        <description>Identifies the Tax Amount of the Expense</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__ex_Tax_Amt__c</fullName>
        <description>Formula: Calculates the ex-Tax Amount based on &apos;Amount&apos; - &apos;Tax Amount&apos;</description>
        <formula>amc__Amount__c - amc__Tax_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ex-Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Incurred_By__c</columns>
        <columns>amc__Project__c</columns>
        <columns>amc__Date__c</columns>
        <columns>amc__Category__c</columns>
        <columns>amc__Amount_Claimed__c</columns>
        <columns>amc__Distance_Km_Miles__c</columns>
        <columns>amc__Amount__c</columns>
        <columns>amc__Approver__c</columns>
        <columns>amc__Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>amc__Expenses_Requiring_My_Approval</fullName>
        <columns>NAME</columns>
        <columns>amc__Incurred_By__c</columns>
        <columns>amc__Project__c</columns>
        <columns>amc__Date__c</columns>
        <columns>amc__Category__c</columns>
        <columns>amc__Amount_Claimed__c</columns>
        <columns>amc__Approval_Status__c</columns>
        <columns>amc__Distance_Km_Miles__c</columns>
        <columns>amc__Amount__c</columns>
        <columns>amc__Rejection_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Approver_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>amc__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Expenses Requiring My Approval</label>
    </listViews>
    <listViews>
        <fullName>amc__My_Pending_Expenses</fullName>
        <columns>NAME</columns>
        <columns>amc__Project__c</columns>
        <columns>amc__Category__c</columns>
        <columns>amc__Date__c</columns>
        <columns>amc__Amount__c</columns>
        <columns>amc__Distance_Km_Miles__c</columns>
        <columns>amc__Mileage_Amount__c</columns>
        <columns>amc__Amount_Claimed__c</columns>
        <columns>amc__Expense_Notes__c</columns>
        <columns>amc__Approval_Status__c</columns>
        <columns>amc__Approver__c</columns>
        <columns>amc__Non_Billable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>amc__Incurred_By_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Pending Expenses</label>
    </listViews>
    <nameField>
        <displayFormat>EXP:{000000}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Cannot_Approve_Own_Expenses</fullName>
        <active>false</active>
        <description>Prevents a User from approving their own expenses</description>
        <errorConditionFormula>OR(
AND(ISNEW(), ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;) ,  amc__Incurred_By__r.amc__User__r.Id =  $User.Id )
,
AND(  ISCHANGED(amc__Approval_Status__c),  ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;) ,  amc__Incurred_By__r.amc__User__r.Id =  $User.Id  )
,
AND(ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;), ISCHANGED( amc__Incurred_By__c ), amc__Incurred_By__r.amc__User__r.Id =  $User.Id  )
)</errorConditionFormula>
        <errorMessage>You cannot approve your own expenses</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Enforce_Cost_Values</fullName>
        <active>true</active>
        <description>Ensures the Cost Amout and Cost Tax Amount fields contain values if Mark Up Required = TRUE</description>
        <errorConditionFormula>AND(
  amc__Mark_Up_Required__c, 
 OR(
  ISBLANK(amc__Cost_Amount__c),
  ISBLANK(amc__Cost_Tax_Amount__c)
 )
)</errorConditionFormula>
        <errorMessage>If Mark Up Required = TRUE, Cost Amount and Cost Tax Amount must contain values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Only_Distance_or_Amount_can_be_entered</fullName>
        <active>true</active>
        <description>Only Distance (Km / Miles) or the Amount field can contain a value, not both.</description>
        <errorConditionFormula>AND( NOT(ISBLANK( amc__Distance_Km_Miles__c )) ,NOT(ISBLANK( amc__Amount__c )) )</errorConditionFormula>
        <errorMessage>You can only enter Distance (Km / Miles) OR Amount, not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Prevent_Mark_Up_Required</fullName>
        <active>false</active>
        <description>Prevent Mark Up Required being TRUE if Distance (Km / Miles) &gt; 0</description>
        <errorConditionFormula>AND(amc__Mark_Up_Required__c,
 amc__Distance_Km_Miles__c &gt;0
)</errorConditionFormula>
        <errorMessage>Mark Up Required cannot be TRUE if Distance (Km / Miles) is greather than 0</errorMessage>
    </validationRules>
</CustomObject>